# lupita

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: agent.py  fast_api_app.py
conductor/: plan-a2ui-components.md  product-guidelines.md  product.md  tech-stack.md
luppita/: agent.py  fast_api_app.py  sheets.py  ui_schema.py
luppita/app_utils/: telemetry.py  typing.py
luppita/tools/: __init__.py  alerts.py  contracts.py  maintenance.py  payments.py  taxes.py
web/: Dockerfile  cloudbuild.yaml  index.html  package-lock.json  package.json  playwright.config.js
web/src/: A2UIRenderer.jsx  App.css  App.jsx  index.css
web/tests-ui/features/: a2ui_obsidian.feature
web/tests-ui/steps/: a2ui_steps.js
